--- a/README.org
+++ b/README.org
@@ -9,106 +9,10 @@ all my questions and offering their support and encouragement.
 
 * Work list
 
-** DONE Typeset the proof of (56) in LaTeX
-- Note taken on [2021-02-11 Thu 08:57] \\
-  Scott to provide a template LaTeX file for John to typeset his new (56)
-  Theorem proof.
-
-#+begin_src text
-(56) □ (p ⇒ ◯ (p ∨ q)) ⇒ p ⇒ □ p ∨ p U q
-
- Proof:
-
-     true
-   =   ⟨(55) Axiom, U Induction, with p := p, q := ◯ p, r := ◯ q⟩
-     □ (p ⇒ (◯ p ∧ ◯ p) ∨ ◯ q) ⇒ (p ⇒ □ ◯ p ∨ ◯ p U ◯ q)
-   =   ⟨idempotency of ∧⟩
-     □ (p ⇒ ◯ p ∨ ◯ q) ⇒ (p ⇒ □ ◯ p ∨ ◯ p U ◯ q)
-   =   ⟨(4) Distributivity of ◯ over ∨⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ □ ◯ p ∨ ◯ p U ◯ q)
-   =   ⟨⊤ ∧ p ≡ p⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ ⊤ ∧ (p ⇒ □ ◯ p ∨ ◯ p U ◯ q)
-   =   ⟨p ⇒ p ≡ ⊤⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ p) ∧ (p ⇒ □ ◯ p ∨ (◯ p U ◯ q))
-   =   ⟨p ⇒ q ≡ ¬p ∨ q, ∨ distributes over ∧⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ p ∧ (□ ◯ p ∨ ◯ p U ◯ q))
-   =   ⟨∧ distributes over ∨⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (p ∧ □ ◯ p) ∨ (p ∧ ◯ p U ◯ q))
-   =>  ⟨p ⇒ p ∨ q, with p := p ∧ b, q := q⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ ((p ∧ □ ◯ p) ∨ q) ∨ (p ∧ ◯ p U ◯ q))
-   =   ⟨commutativity of ∨⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (q ∨ (p ∧ □ ◯ p)) ∨ (p ∧ ◯ p U ◯ q))
-   =   ⟨(9) Axiom, Distributivity of ◯ over U⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (q ∨ (p ∧ □ ◯ p)) ∨ (p ∧ ◯ (p U q)))
-   =   ⟨(10) Axiom, Expansion of U⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (p ∧ □ ◯ p) ∨ (p U q))
-   =   ⟨(73) Exchange of ◯ and □⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (p ∧ ◯ □ p) ∨ (p U q))
-   =   ⟨(66) Expansion of □⟩
-     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (□ p ∨ (p U q)))    ∎
-#+end_src
-:PROPERTIES:
-:ID:       A3ABA0D7-A3A9-48F9-88E7-F03BC60D6E1B
-:CREATED:  [2021-02-11 Thu 08:57]
-:END:
-
-** TODO Typeset the proof of (58) in LaTeX
-#+begin_src text
-(58) □ (◯ p ⇒ p) ⇒ (◇ p ⇒ p)
-
- Proof:
-
-     true
-   =   ⟨(56) Axiom, U Induction, with p := ¬p, q := ⊥⟩
-     □ (¬p ⇒ ◯ (¬p ∨ ⊥)) ⇒ (¬p ⇒ □ ¬p ∨ (¬p U ⊥))
-   =   ⟨(11) Axiom, Right zero of U⟩
-     □ (¬p ⇒ ◯ (¬p ∨ ⊥)) ⇒ (¬p ⇒ □ ¬p ∨ ⊥)
-   =   ⟨p ∨ ⊥ ≡ p⟩
-     □ (¬p ⇒ ◯ ¬p) ⇒ (¬p ⇒ □ ¬p)
-   =   ⟨(3) Linearity⟩
-     □ (¬p ⇒ ¬(◯ ¬¬p)) ⇒ (¬p ⇒ □ ¬p)
-   =   ⟨¬¬p ≡ p, ¬p ⇒ q ≡ p ∨ q⟩
-     □ (p ∨ ¬ ◯ p) ⇒ p ∨ □ ¬p
-   =   ⟨commutativity of ∨, p ⇒ q ≡ ¬p ∨ q⟩
-     □ (◯ p ⇒ p) ⇒ □ ¬p ∨ p
-   =   ⟨(54) Definition of □⟩
-     □ (◯ p ⇒ p) ⇒ (¬◇ ¬¬p ∨ p)
-   =>  ⟨¬¬p ≡ p, p ⇒ q ≡ ¬p ∨ q⟩
-     □ (◯ p ⇒ p) ⇒ (◇ p ⇒ p)    ∎
-#+end_src
-:PROPERTIES:
-:ID:       51EF7EE2-09A1-41EC-92B6-DE8B12A7699D
-:CREATED:  [2021-02-11 Thu 10:43]
-:END:
-
-** TODO Typeset new proof (57): □ ¬p ∧ p U q ⇒ q
-:PROPERTIES:
-:ID:       FC4ECD01-B161-4081-9C63-4E127FAFBD4F
-:CREATED:  [2021-02-11 Thu 10:50]
-:END:
-
-** TODO Prove monotonicity properties of the modal operators
-:PROPERTIES:
-:ID:       6478060E-DEFE-4F03-BD26-2DA3CF3EEA4A
-:CREATED:  [2021-02-11 Thu 08:59]
-:END:
-
 ** TODO Produce a CDS4LTL proof of (55)
 :PROPERTIES:
 :ID:       6F57D36C-AE95-4AB6-8843-6A338055DBC3
 :CREATED:  [2021-02-11 Thu 08:52]
-:END:
-
-** DONE Find an appropriate statement of (82)
-:PROPERTIES:
-:ID:       5D6FD9DA-0C74-424A-B6A0-6F10CB85D13E
-:CREATED:  [2021-02-11 Thu 11:30]
-:END:
-
-** TODO Is =Proper (impl ==> impl) eventually= a valid statement?
-:PROPERTIES:
-:ID:       A4DB0B7D-171D-4438-999A-0FF968C0F9E0
-:CREATED:  [2021-02-11 Thu 08:55]
 :END:
 
 ** TODO Complete the stream semantic model of LinearTemporalLogic
@@ -118,10 +22,16 @@ This may be found in Model.v
 :CREATED:  [2021-02-11 Thu 08:55]
 :END:
 
-** TODO Find a more minimal set of until axioms
+** TODO Write a short paper on the Coq formulation of CDS4LTL
 :PROPERTIES:
-:ID:       E78658FF-D458-46FB-A0EA-6D826CF227CB
-:CREATED:  [2021-02-11 Thu 08:56]
+:ID:       40030D5B-9336-4005-BFD1-64F0C2106BE3
+:CREATED:  [2021-02-11 Thu 08:58]
+:END:
+
+** TODO Typeset new proof (57): □ ¬p ∧ p U q ⇒ q
+:PROPERTIES:
+:ID:       FC4ECD01-B161-4081-9C63-4E127FAFBD4F
+:CREATED:  [2021-02-11 Thu 10:50]
 :END:
 
 ** TODO Read the ACL2 paper that Scott provided
@@ -139,46 +49,17 @@ This may be found in Model.v
 :CREATED:  [2021-02-11 Thu 08:57]
 :END:
 
-** TODO Take a fresh-eyes look at the Dummett formula
-:PROPERTIES:
-:ID:       4E133597-5BC0-4873-9F85-A20137E80F7B
-:CREATED:  [2021-02-11 Thu 08:58]
-:END:
-
-** TODO Write a short paper on the Coq formulation of CDS4LTL
-:PROPERTIES:
-:ID:       40030D5B-9336-4005-BFD1-64F0C2106BE3
-:CREATED:  [2021-02-11 Thu 08:58]
-:END:
-
-** DONE Find a better axiomatic basis for proving (82)
-:PROPERTIES:
-:ID:       2540261A-82CE-4CD2-838C-32847BC3BD4B
-:CREATED:  [2021-02-11 Thu 08:58]
-:END:
-
-** DONE Rebuild the syntactic, Mealy-machine based evaluation model
-:PROPERTIES:
-:ID:       DE89F702-84A9-407D-AA4F-FCABB7F2394A
-:CREATED:  [2021-02-11 Thu 09:39]
-:END:
-
 ** TODO Build up theorems for Release (R) and Strong Release (M)
 :PROPERTIES:
 :ID:       6F7FF7D9-E21F-4982-B638-4A8A902D1BE6
 :CREATED:  [2021-02-11 Thu 09:46]
 :END:
-** TODO Write a program to produce an ideal ordering of the LTL theorems
+** DONE Write a program to produce an ideal ordering of the LTL theorems
 This would first build a dependency graph, and then for items at the same
 level, order them based on term complexity.
 :PROPERTIES:
 :ID:       70E545FF-5640-4E48-AE24-F818F53A9E52
 :CREATED:  [2021-02-19 Fri 10:43]
-:END:
-** DONE Typeset new proof (238)
-:PROPERTIES:
-:ID:       6848091F-39F6-4D56-AD71-540C507BBF95
-:CREATED:  [2021-02-19 Fri 10:56]
 :END:
 ** TODO Starting a new working document
 ... to cover new work on CDS4LTL/Coq proof discovery; new, reduced axiomatic
@@ -223,9 +104,128 @@ the same satisfiability condition but with j being of type integer, such that:
 :ID:       732E06FD-6EE3-4091-8B9B-7EF4F473DC97
 :CREATED:  [2021-02-22 Mon 14:34]
 :END:
-** TODO Prove the new axiom relating individual terms to until
+** DONE Prove the new axiom relating individual terms to until
 p ∧ q U ¬p ⇒ (q ∧ p) U (q ∧ p ∧ ¬◯ p)
 :PROPERTIES:
 :ID:       DB0F1502-BE6B-4F48-B524-25CD4A0D8A4C
 :CREATED:  [2021-02-22 Mon 14:35]
+:END:
+** DONE Typeset the proof of (56) in LaTeX
+- Note taken on [2021-02-11 Thu 08:57] \\
+  Scott to provide a template LaTeX file for John to typeset his new (56)
+  Theorem proof.
+
+#+begin_src text
+(56) □ (p ⇒ ◯ (p ∨ q)) ⇒ p ⇒ □ p ∨ p U q
+
+ Proof:
+
+     true
+   =   ⟨(55) Axiom, U Induction, with p := p, q := ◯ p, r := ◯ q⟩
+     □ (p ⇒ (◯ p ∧ ◯ p) ∨ ◯ q) ⇒ (p ⇒ □ ◯ p ∨ ◯ p U ◯ q)
+   =   ⟨idempotency of ∧⟩
+     □ (p ⇒ ◯ p ∨ ◯ q) ⇒ (p ⇒ □ ◯ p ∨ ◯ p U ◯ q)
+   =   ⟨(4) Distributivity of ◯ over ∨⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ □ ◯ p ∨ ◯ p U ◯ q)
+   =   ⟨⊤ ∧ p ≡ p⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ ⊤ ∧ (p ⇒ □ ◯ p ∨ ◯ p U ◯ q)
+   =   ⟨p ⇒ p ≡ ⊤⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ p) ∧ (p ⇒ □ ◯ p ∨ (◯ p U ◯ q))
+   =   ⟨p ⇒ q ≡ ¬p ∨ q, ∨ distributes over ∧⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ p ∧ (□ ◯ p ∨ ◯ p U ◯ q))
+   =   ⟨∧ distributes over ∨⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (p ∧ □ ◯ p) ∨ (p ∧ ◯ p U ◯ q))
+   =>  ⟨p ⇒ p ∨ q, with p := p ∧ b, q := q⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ ((p ∧ □ ◯ p) ∨ q) ∨ (p ∧ ◯ p U ◯ q))
+   =   ⟨commutativity of ∨⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (q ∨ (p ∧ □ ◯ p)) ∨ (p ∧ ◯ p U ◯ q))
+   =   ⟨(9) Axiom, Distributivity of ◯ over U⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (q ∨ (p ∧ □ ◯ p)) ∨ (p ∧ ◯ (p U q)))
+   =   ⟨(10) Axiom, Expansion of U⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (p ∧ □ ◯ p) ∨ (p U q))
+   =   ⟨(73) Exchange of ◯ and □⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (p ∧ ◯ □ p) ∨ (p U q))
+   =   ⟨(66) Expansion of □⟩
+     □ (p ⇒ ◯ (p ∨ q)) ⇒ (p ⇒ (□ p ∨ (p U q)))    ∎
+#+end_src
+:PROPERTIES:
+:ID:       A3ABA0D7-A3A9-48F9-88E7-F03BC60D6E1B
+:CREATED:  [2021-02-11 Thu 08:57]
+:END:
+
+** DONE Typeset the proof of (58) in LaTeX
+#+begin_src text
+(58) □ (◯ p ⇒ p) ⇒ (◇ p ⇒ p)
+
+ Proof:
+
+     true
+   =   ⟨(56) Axiom, U Induction, with p := ¬p, q := ⊥⟩
+     □ (¬p ⇒ ◯ (¬p ∨ ⊥)) ⇒ (¬p ⇒ □ ¬p ∨ (¬p U ⊥))
+   =   ⟨(11) Axiom, Right zero of U⟩
+     □ (¬p ⇒ ◯ (¬p ∨ ⊥)) ⇒ (¬p ⇒ □ ¬p ∨ ⊥)
+   =   ⟨p ∨ ⊥ ≡ p⟩
+     □ (¬p ⇒ ◯ ¬p) ⇒ (¬p ⇒ □ ¬p)
+   =   ⟨(3) Linearity⟩
+     □ (¬p ⇒ ¬(◯ ¬¬p)) ⇒ (¬p ⇒ □ ¬p)
+   =   ⟨¬¬p ≡ p, ¬p ⇒ q ≡ p ∨ q⟩
+     □ (p ∨ ¬ ◯ p) ⇒ p ∨ □ ¬p
+   =   ⟨commutativity of ∨, p ⇒ q ≡ ¬p ∨ q⟩
+     □ (◯ p ⇒ p) ⇒ □ ¬p ∨ p
+   =   ⟨(54) Definition of □⟩
+     □ (◯ p ⇒ p) ⇒ (¬◇ ¬¬p ∨ p)
+   =>  ⟨¬¬p ≡ p, p ⇒ q ≡ ¬p ∨ q⟩
+     □ (◯ p ⇒ p) ⇒ (◇ p ⇒ p)    ∎
+#+end_src
+:PROPERTIES:
+:ID:       51EF7EE2-09A1-41EC-92B6-DE8B12A7699D
+:CREATED:  [2021-02-11 Thu 10:43]
+:END:
+
+** DONE Prove monotonicity properties of the modal operators
+:PROPERTIES:
+:ID:       6478060E-DEFE-4F03-BD26-2DA3CF3EEA4A
+:CREATED:  [2021-02-11 Thu 08:59]
+:END:
+
+** DONE Find an appropriate statement of (82)
+:PROPERTIES:
+:ID:       5D6FD9DA-0C74-424A-B6A0-6F10CB85D13E
+:CREATED:  [2021-02-11 Thu 11:30]
+:END:
+
+** DONE Is =Proper (impl ==> impl) eventually= a valid statement?
+:PROPERTIES:
+:ID:       A4DB0B7D-171D-4438-999A-0FF968C0F9E0
+:CREATED:  [2021-02-11 Thu 08:55]
+:END:
+
+** DONE Find a more minimal set of until axioms
+:PROPERTIES:
+:ID:       E78658FF-D458-46FB-A0EA-6D826CF227CB
+:CREATED:  [2021-02-11 Thu 08:56]
+:END:
+
+** DONE Take a fresh-eyes look at the Dummett formula
+:PROPERTIES:
+:ID:       4E133597-5BC0-4873-9F85-A20137E80F7B
+:CREATED:  [2021-02-11 Thu 08:58]
+:END:
+
+** DONE Find a better axiomatic basis for proving (82)
+:PROPERTIES:
+:ID:       2540261A-82CE-4CD2-838C-32847BC3BD4B
+:CREATED:  [2021-02-11 Thu 08:58]
+:END:
+
+** DONE Rebuild the syntactic, Mealy-machine based evaluation model
+:PROPERTIES:
+:ID:       DE89F702-84A9-407D-AA4F-FCABB7F2394A
+:CREATED:  [2021-02-11 Thu 09:39]
+:END:
+
+** DONE Typeset new proof (238)
+:PROPERTIES:
+:ID:       6848091F-39F6-4D56-AD71-540C507BBF95
+:CREATED:  [2021-02-19 Fri 10:56]
 :END:
